# dpsim-villas

./: .gitignore  CMakeLists.txt  README.md
examples/cxx/: CMakeLists.txt  SLEW_Shmem_CIGRE_MV_PowerFlow.cpp  SLEW_Shmem_DP_SynGenTrStab_3Bus.cpp
src/: InterfaceSampleBased.cpp  InterfaceShmem.cpp
